# tdom-path

./: .gitignore  .python-version  Justfile  LICENSE  README.md  confirm_ft.py  conftest.py  initial_spec.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/global-best-practices/: SKILL.md
.claude/skills/global-code-style/: SKILL.md
.claude/skills/global-documentation/: SKILL.md
.claude/skills/global-naming/: SKILL.md
.claude/skills/global-typing/: SKILL.md
.github/actions/setup-python-uv/: action.yml
.github/workflows/: ci.yml  pages.yml  pypi.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/specs/2025-12-20-core-path-api/: spec.md  tasks.md
agent-os/specs/2025-12-20-node-annotation/: spec.md  tasks.md
agent-os/specs/2025-12-21-asset-collection/: spec.md  tasks.md
agent-os/specs/2025-12-21-measure-performance/: spec.md  tasks.md
agent-os/specs/2025-12-21-traversable-and-package-specs/: spec.md  tasks.md
agent-os/specs/2025-12-21-traversable-element/: spec.md  tasks.md
agent-os/specs/2025-12-21-traversable-rendering/: RAW_IDEA.md  spec.md  tasks.md
agent-os/specs/2025-12-22-documentation/: spec.md  tasks.md
agent-os/standards/global/: best-practices.md  code-style.md  documentation.md  typing.md
agent-os/standards/testing/: pytest.md
docs/: conf.py  conftest.py  index.md
docs/guides/: advanced.md  cookbook.md  core-concepts.md  framework-integration.md  index.md  performance.md
docs/reference/: api-reference.md  index.md  specifications.md
examples/flask-example/: README.md  app.py
examples/mysite/: __init__.py
examples/mysite/static/: app.js
memory-bank/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
src/tdom_path/: __init__.py  tree.py  webpath.py
tests/: __init__.py  test_asset_collection.py  test_fixture_integration.py  test_integration_traversable.py  test_integration_traversable.py.bak  test_integration_traversable.py.bak2  test_performance.py  test_tree.py  test_type_compatibility.py  test_webpath.py
(+34 files in other folders)
